@@ -12,8 +12,8 @@ import static org.junit.Assert.assertThat;
 public class DepartmentsTest {
     @Test
     public void whenMissed() {
-        List<String> input = Arrays.asList("k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         Departments.sortAsc(result);
         assertThat(result, is(expect));
@@ -21,8 +21,8 @@ public class DepartmentsTest {
 
     @Test
     public void whenNonChange() {
-        List<String> input = Arrays.asList("k1", "k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         Departments.sortAsc(result);
         assertThat(result, is(expect));
@@ -30,8 +30,8 @@ public class DepartmentsTest {
 
     @Test
     public void whenMissedAndAscSorted() {
-        List<String> input = Arrays.asList("k2/sk2/ssk2", "k1/sk1/ssk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1", "k1/sk1/ssk1", "k2", "k2/sk2", "k2/sk2/ssk2");
+        List<String> input = List.of("k2/sk2/ssk2", "k1/sk1/ssk1");
+        List<String> expect = List.of("k1", "k1/sk1", "k1/sk1/ssk1", "k2", "k2/sk2", "k2/sk2/ssk2");
         List<String> result = Departments.fillGaps(input);
         Departments.sortAsc(result);
         assertThat(result, is(expect));
@@ -39,8 +39,8 @@ public class DepartmentsTest {
 
     @Test
     public void whenMissedAndDescSorted() {
-        List<String> input = Arrays.asList("k1/sk1/ssk1", "k2/sk2/ssk2");
-        List<String> expect = Arrays.asList("k2", "k2/sk2", "k2/sk2/ssk2", "k1", "k1/sk1", "k1/sk1/ssk1");
+        List<String> input = List.of("k1/sk1/ssk1", "k2/sk2/ssk2");
+        List<String> expect = List.of("k2", "k2/sk2", "k2/sk2/ssk2", "k1", "k1/sk1", "k1/sk1/ssk1");
         List<String> result = Departments.fillGaps(input);
         Departments.sortDesc(result);
         assertThat(result, is(expect));
